Fix deprecated Java flags
Per (1) and (2), GC logging flags have been either converted to Xlog or removed in Java 11. This commit gets rid of flags that no longer exist, and changes ones that have been changed.

(1) https://confluence.atlassian.com/confkb/how-to-enable-garbage-collection-gc-logging-300813751.html
(2) https://docs.oracle.com/javase/9/tools/java.htm#JSWOR-GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5